# VS1984_Dashboard

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
dashboard/: app.py
xbcpy/: __init__.py  cli.py  client.py  config.py  protocol.py
